# lds

./: Cargo.toml  README.md
contrib/: .gitignore  PKGBUILD  ldsd.service
docs/: MIDDLEWARE-NOTES.md  STREAMING-AND-MODELS.md
src/: audio_capture.rs  cli.rs  config.rs  hotkeys.rs  ipc.rs  main.rs  smooth_typist.rs.disabled  streaming.rs  streaming.rs.disabled  text_middleware.rs  transcript_log.rs  vad.rs  vad.rs.disabled  wayland_typist.rs  whisper_provider.rs
