[package]
name = "lds"
version = "0.1.0"
edition = "2024"
authors = ["Byte <byte@militech>"]
description = "Liam's Dictation Service — local STT daemon with Vulkan GPU, clipboard delivery, and COSMIC applet"
repository = "https://github.com/BYTE-6D65/lds"
keywords = ["whisper", "speech-to-text", "stt", "dictation", "wayland"]
categories = ["command-line-utilities", "accessibility"]
license = "MIT"

[dependencies]
async-channel = "2.3.1"
bytemuck = "1.16.0"
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
cpal = "0.15.3"
enigo = { version = "0.2.1", features = ["wayland"], default-features = false }
evdev = { version = "0.12.2", features = ["tokio"] }
futures-util = "0.3.30"
notify = "6.1.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync", "time", "macros", "full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
whisper-rs = { version = "0.16", features = ["vulkan"] }
hound = "3.5"
arboard = "3.4"
toml = "0.8"

# GTK overlay deps — kept temporarily for overlay mode, will be removed
gdk = { version = "0.8.2", package = "gdk4", features = ["v4_14"], optional = true }
gdk-wayland = { version = "0.8.2", package = "gdk4-wayland", features = ["wayland_crate", "v4_12"], optional = true }
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_14"], optional = true }
gtk-layer-shell = { version = "0.3.0", package = "gtk4-layer-shell", optional = true }
colorgrad = { version = "0.6.2", optional = true }

[features]
default = []
overlay = ["gdk", "gdk-wayland", "gtk", "gtk-layer-shell", "colorgrad"]
