[package]
name = "lds"
version = "0.1.0"
edition = "2024"
authors = ["Byte <byte@militech>"]
description = "Linguistic Dispatch System — local STT daemon with Vulkan GPU, clipboard delivery, and COSMIC applet"
repository = "https://github.com/BYTE-6D65/lds"
keywords = ["whisper", "speech-to-text", "stt", "dictation", "wayland"]
categories = ["command-line-utilities", "accessibility"]
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
cpal = "0.15.3"
enigo = { version = "0.2.1", features = ["wayland"], default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "io-util", "sync", "time", "macros", "full", "net"] }
futures-util = "0.3.30"
tokio-tungstenite = "0.26"
whisper-rs = { version = "0.16", features = ["vulkan"] }
arboard = "3.4"
toml = "0.8"
